--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'com.squareup.okhttp3:okhttp:4.2.1'
     implementation project(path: ':sinch-android-rtc-3.15.0')
+    implementation 'com.github.AppIntro:AppIntro:5.1.0'
+
 }
