--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+       >
         <activity
             android:name=".AppIntroActivity"
-            android:theme="@style/Theme.Design.Light.NoActionBar">
+            android:theme="@style/Theme.Design.Light.NoActionBar"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,12 +24,16 @@
 
         <activity
             android:name=".ForgotPasswordActivity"
-            android:parentActivityName=".LoginActivity" />
-        <activity android:name=".GroupChatActivity" />
-        <activity android:name=".CallActivity" />
+            android:parentActivityName=".LoginActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".GroupChatActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".CallActivity"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".ChatActivity"
             android:excludeFromRecents="true"
+            android:screenOrientation="portrait"
             android:parentActivityName=".MainActivity">
             <intent-filter>
                 <action android:name="com.example.chitchat_TARGET_MESSAGE_NOTIFICATION" />
@@ -38,7 +44,8 @@
         <activity
             android:name=".ProfileActivity"
             android:excludeFromRecents="true"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="com.example.chitchat_TARGET_NOTIFICATION" />
 
@@ -47,17 +54,25 @@
         </activity>
         <activity
             android:name=".UsersActivity"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".StatusActivity"
-            android:parentActivityName=".SettingsActivity" />
-        <activity android:name=".SettingsActivity" />
-        <activity android:name=".LoginActivity" />
+            android:parentActivityName=".SettingsActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".SettingsActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".LoginActivity"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".RegisterActivity"
+            android:screenOrientation="portrait"
+
             android:parentActivityName=".StartActivity" />
-        <activity android:name=".StartActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".StartActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait">
 
             <!-- <intent-filter> -->
             <!-- <action android:name="android.intent.action.MAIN" /> -->
@@ -68,13 +83,15 @@
         </activity>
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
-            android:theme="@style/Base.Theme.AppCompat" />
+            android:theme="@style/Base.Theme.AppCompat"
+            android:screenOrientation="portrait"/>
         <meta-data
             android:name="com.google.firebase.default_notification_channel_id"
-            android:value="fcm_default_channel" />
+            android:value="fcm_default_channel"
+           />
 
         <service
-            android:name=".ChatMessagingService"
+            android:name=".Service.ChatMessaginService"
             android:enabled="false"
             android:exported="false"></service> <!-- adding -->
         <service android:name=".Service.FirebaseMessagingService">
