--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion 28
@@ -56,5 +57,8 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.2.1'
     implementation project(path: ':sinch-android-rtc-3.15.0')
     implementation 'com.github.AppIntro:AppIntro:5.1.0'
+    implementation 'com.google.firebase:firebase-analytics:11.8.0'
+
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
 
 }
