--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,18 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven {
+            url 'https://maven.fabric.io/public'
+        }
         
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.0'
         classpath 'com.google.gms:google-services:4.3.2'
+        // Add dependency
+        classpath 'io.fabric.tools:gradle:1.31.2'  // Crashlytics plugin
+
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -20,6 +27,7 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
+
 
     }
 }
